[tool.pylint]
ignore-patterns = ".*\\.pyi"

[tool.pylint.format]
good-names = ["x", "y", "z", "i", "id", "ok"]

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "no-name-in-module",
    "useless-import-alias",
    "line-too-long",
    "too-many-arguments",
    "too-few-public-methods",
    "too-many-instance-attributes",
    "unnecessary-ellipsis",
]

[tool.ruff]
src = ["src"]
line-length = 120

[tool.ruff.lint]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "single"

[tool.pyright]
stubPath = "src/typings"
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportMissingTypeStubs = false

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.poetry]
name = "Examplify"
version = "0.1.0"
description = ""
authors = ["winstxnhdw <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
granian = "^1.6.1"
litestar = "^2.12.1"
uvloop = "^0.21.0"
msgspec = "^0.18.6"
pydantic-settings = "^2.3.4"
ctranslate2 = "^4.3.1"
transformers = "^4.45.2"
sentencepiece = "^0.2.0"
sentence-transformers = "^3.2.0"
protobuf = "^5.27.2"
pymupdf = "^1.24.11"
redis = "^5.1.1"
hiredis = "^3.0.0"
tesserocr = "^2.7.0"
torch = "^2.4.0"
nltk = "^3.8.1"
picologging = "^0.9.3"
fastnanoid = "^0.4.1"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.385"
pytest = "^8.3.2"
pylint = "^3.3.1"
ruff = "^0.6.9"
