[tool.pylint]
ignore-patterns = ".*\\.pyi"

[tool.pylint.format]
good-names = ["x", "y", "z", "i", "id", "ok"]

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "no-name-in-module",
    "useless-import-alias",
    "line-too-long",
    "too-many-arguments",
    "too-few-public-methods",
    "too-many-instance-attributes",
    "unnecessary-ellipsis",
]

[tool.ruff]
src = ["src"]
line-length = 120

[tool.ruff.lint]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "single"

[tool.pyright]
stubPath = "src/typings"
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportMissingTypeStubs = false

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.poetry]
name = "Examplify"
version = "0.1.0"
description = ""
authors = ["winstxnhdw <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
granian = "^1.6.3"
litestar = "^2.12.1"
uvloop = "^0.21.0"
msgspec = "^0.18.6"
pydantic-settings = "^2.6.0"
ctranslate2 = "^4.5.0"
transformers = "^4.46.1"
sentencepiece = "^0.2.0"
sentence-transformers = "^3.2.1"
protobuf = "^5.28.3"
pymupdf = "^1.24.13"
redis = "^5.2.0"
hiredis = "^3.0.0"
tesserocr = "^2.7.0"
torch = "^2.5.1"
nltk = "^3.8.1"
picologging = "^0.9.3"
fastnanoid = "^0.4.1"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.387"
pytest = "^8.3.2"
pylint = "^3.3.1"
ruff = "^0.7.1"
