[tool.pylint]
ignore-patterns = ".*\\.pyi"

[tool.pylint.format]
good-names = ["x", "y", "z", "i", "id", "ok"]

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "no-name-in-module",
    "useless-import-alias",
    "line-too-long",
    "too-many-arguments",
    "too-few-public-methods",
    "too-many-instance-attributes",
    "unnecessary-ellipsis",
]

[tool.ruff]
src = ["src"]
line-length = 120

[tool.ruff.lint]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "single"

[tool.pyright]
stubPath = "src/typings"
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportMissingTypeStubs = false

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.poetry]
name = "Examplify"
version = "0.1.0"
description = ""
authors = ["winstxnhdw <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
granian = "^1.7.6"
litestar = "^2.14.0"
uvloop = "^0.21.0"
msgspec = "^0.19.0"
pydantic-settings = "^2.7.1"
ctranslate2 = "^4.5.0"
transformers = "^4.48.3"
sentencepiece = "^0.2.0"
sentence-transformers = "^3.4.1"
protobuf = "^5.29.3"
pymupdf = "^1.25.3"
redis = "^5.2.1"
hiredis = "^3.1.0"
tesserocr = "^2.7.0"
torch = "^2.6.0"
nltk = "^3.8.1"
picologging = "^0.9.3"
fastnanoid = "^0.4.1"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.394"
pytest = "^8.3.4"
pylint = "^3.3.4"
ruff = "^0.9.6"
